--- a/templates/ajax/game/town/construction.html.twig
+++ b/templates/ajax/game/town/construction.html.twig
@@ -231,9 +231,13 @@
             let ap = null, valid = false;
             ap = document.getElementById("ap_amount").value;
             ap = parseInt(ap);
-            valid = !isNaN(ap) && ap >= 0 && ap <= {{ app.user.activeCitizen.ap + app.user.activeCitizen.bp }};
+            if (!ap || isNaN(ap)) return;
 
-            if (!ap || !valid) return;
+            valid = ap >= 0 && ap <= {{ app.user.activeCitizen.ap + app.user.activeCitizen.bp }};
+            if (!valid) {
+                $.html.error('{{ '<strong>Du brauchst für diese Aktion {ap} Aktionspunkt(e)</strong>. <hr />Trink oder iss etwas, oder nimm eine Droge, ansonsten muss du bis <strong>morgen</strong> warten.'|trans({},'game')|raw }}'.replace('{ap}', '' + ap))
+                return;
+            }
 
             $.ajax.easySend( '{{ path('town_constructions_build_controller') }}', {id: document.getElementById("prompt_id").value, ap: ap},
                 function () {
