--- a/templates/ajax/admin/users/multi_index.html.twig
+++ b/templates/ajax/admin/users/multi_index.html.twig
@@ -24,7 +24,7 @@
                             <div class="cell rw-2 rw-md-3 padded">
                                 {{ table.likeliness }}
                             </div>
-                            <div class="cell rw-md-12 {% if is_granted('ROLE_ADMIN') %}rw-5{% else %}rw-6{% endif %}">
+                            <div class="cell rw-md-12 {% if is_granted('ROLE_ADMIN') %}rw-4{% else %}rw-6{% endif %}">
                                 {% set group = [] %}
                                 {% for multi in table.users %}
                                     {% set group = group|merge([multi.id]) %}
@@ -43,9 +43,10 @@
                                 {% endfor %}
                             </div>
                             {% if is_granted('ROLE_ADMIN') %}
-                                <div class="cell rw-1 rw-md-12 padded">
-                                    <button x-shadow x-api-endpoint="{{ url('admin_users_account_manage', {action: 'shadow',    id: table.principal.id}) }}"><div class="tooltip">{{ 'Bann'|trans({},'admin') }}</div><i class="fa fa-hammer hide-desktop"></i> <span class="hide-lg">{{ 'Bann'|trans({},'admin') }}</span></button>
-                                    <button x-whitelist="{{ group|join('|') }}" x-api-endpoint="{{ url('admin_users_account_manage', {action: 'whitelist', id: table.principal.id}) }}"><div class="tooltip">{{ 'Whitelist'|trans({},'admin') }}</div><i class="fa fa-clipboard-check hide-desktop"></i> <span class="hide-lg">{{ 'Whitelist'|trans({},'admin') }}</span></button>
+                                <div class="cell rw-2 rw-md-12 padded">
+                                    <button class="small inline" x-shadow="{{ table.principal.id }}" x-api-endpoint="{{ url('admin_users_account_manage', {action: 'shadow',    id: table.principal.id}) }}"><i class="fa fa-hammer hide-desktop"></i> <span class="hide-lg">{{ 'Bann'|trans({},'admin') }}</span></button>
+                                    <button class="small inline" x-shadow="{{ group|join('|') }}" x-api-endpoint="{{ url('admin_users_account_manage', {action: 'shadow',    id: table.principal.id}) }}"><i class="fa fa-hammer hide-desktop"></i> <span class="hide-lg">{{ 'Alle bannen'|trans({},'admin') }}</span></button>
+                                    <button class="small inline" x-whitelist="{{ group|join('|') }}" x-api-endpoint="{{ url('admin_users_account_manage', {action: 'whitelist', id: table.principal.id}) }}"><i class="fa fa-clipboard-check hide-desktop"></i> <span class="hide-lg">{{ 'Whitelist'|trans({},'admin') }}</span></button>
                                 </div>
                             {% endif %}
                         </div>
@@ -62,9 +63,11 @@
         {% if is_granted("ROLE_ADMIN") %}
             $.html.addEventListenerAll('[x-shadow][x-api-endpoint]', 'click', function(e,elem) {
                 if (confirm("{{ 'Bestätigen?'|trans({},'global')|e('js') }}\nBAN"))
-                    $.ajax.easySend( elem.getAttribute('x-api-endpoint'), {param: 'Multi Account'},
+                    $.ajax.easySend( elem.getAttribute('x-api-endpoint'), {param: {
+                        reason: 'Multi Account', ids: elem.getAttribute('x-shadow').split('|'),
+                    }},
                         function () {
-                            $.ajax.load(null, '{{ path('admin_users') }}', true);
+                            $.ajax.load(null, '{{ path('admin_users_multi') }}', true);
                         } );
             });
         $.html.addEventListenerAll('[x-whitelist][x-api-endpoint]', 'click', function(e,elem) {
@@ -75,7 +78,7 @@
                             reason, ids: elem.getAttribute('x-whitelist').split('|'),
                         }},
                     function () {
-                        $.ajax.load(null, '{{ path('admin_users') }}', true);
+                        $.ajax.load(null, '{{ path('admin_users_multi') }}', true);
                     } );
             }
 
