--- a/templates/ajax/admin/users/multi_index.html.twig
+++ b/templates/ajax/admin/users/multi_index.html.twig
@@ -29,7 +29,7 @@
                                 {% for multi in table.users %}
                                     {% set group = group|merge([multi.id]) %}
                                     <span class="small pointer" x-whitelist-alt="{{ url('admin_users_account_view', {id: multi.id}) }}" x-whitelist="{{ group|join('|') }}" x-api-endpoint="{{ url('admin_users_account_manage', {action: 'whitelist', id: table.principal.id}) }}" {% if multi|restricted(constant('App\\Entity\\AccountRestriction::RestrictionGameplay')) %}style="color:red; font-weight: bold"{% endif%} >
-                                        {{ multi.name }}
+                                        <a class="pointer" x-ajax-href="{{ path('admin_users_account_view', {id: multi.id}) }}">{{ multi.name }}</a>
                                         {% if is_granted('ROLE_ADMIN') %}
                                             <div class="tooltip">
                                                 <i>({{ multi.id }})</i> <b>{{ multi.email }}</b>
