--- a/assets/less/intl.less
+++ b/assets/less/intl.less
@@ -1,26 +1,26 @@
-html.lang-base-en #wrapper > #header { background-image: url('../img/background/bg_content_header_en.jpg'); }
-html.lang-base-fr #wrapper > #header { background-image: url('../img/background/bg_content_header_fr.jpg'); }
-html.lang-base-es #wrapper > #header { background-image: url('../img/background/bg_content_header_es.jpg'); }
+html.lang-base-en #wrapper:not(.attract) > #header { background-image: url('../img/background/bg_content_header_en.jpg'); }
+html.lang-base-fr #wrapper:not(.attract) > #header { background-image: url('../img/background/bg_content_header_fr.jpg'); }
+html.lang-base-es #wrapper:not(.attract) > #header { background-image: url('../img/background/bg_content_header_es.jpg'); }
 
-html.lang-base-en body.arma #wrapper > #header { background-image: url('../img/background/header_arma_animated_en.gif'); }
-html.lang-base-fr body.arma #wrapper > #header { background-image: url('../img/background/header_arma_animated_fr.gif'); }
-html.lang-base-es body.arma #wrapper > #header { background-image: url('../img/background/header_arma_animated_es.gif'); }
+html.lang-base-en body.arma #wrapper:not(.attract) > #header { background-image: url('../img/background/header_arma_animated_en.gif'); }
+html.lang-base-fr body.arma #wrapper:not(.attract) > #header { background-image: url('../img/background/header_arma_animated_fr.gif'); }
+html.lang-base-es body.arma #wrapper:not(.attract) > #header { background-image: url('../img/background/header_arma_animated_es.gif'); }
 
-html.lang-base-en body.christmas #wrapper > #header { background-image: url('../img/background/header_xmas_en.webp'); }
-html.lang-base-fr body.christmas #wrapper > #header { background-image: url('../img/background/header_xmas_fr.webp'); }
-html.lang-base-es body.christmas #wrapper > #header { background-image: url('../img/background/header_xmas_es.webp'); }
+html.lang-base-en body.christmas #wrapper:not(.attract) > #header { background-image: url('../img/background/header_xmas_en.webp'); }
+html.lang-base-fr body.christmas #wrapper:not(.attract) > #header { background-image: url('../img/background/header_xmas_fr.webp'); }
+html.lang-base-es body.christmas #wrapper:not(.attract) > #header { background-image: url('../img/background/header_xmas_es.webp'); }
 
-html.lang-base-en body.stpatrick #wrapper > #header { background-image: url('../img/background/header_patrick_en.png'); }
-html.lang-base-fr body.stpatrick #wrapper > #header { background-image: url('../img/background/header_patrick_fr.png'); }
-html.lang-base-es body.stpatrick #wrapper > #header { background-image: url('../img/background/header_patrick_es.png'); }
+html.lang-base-en body.stpatrick #wrapper:not(.attract) > #header { background-image: url('../img/background/header_patrick_en.png'); }
+html.lang-base-fr body.stpatrick #wrapper:not(.attract) > #header { background-image: url('../img/background/header_patrick_fr.png'); }
+html.lang-base-es body.stpatrick #wrapper:not(.attract) > #header { background-image: url('../img/background/header_patrick_es.png'); }
 
-html.lang-base-en body.easter #wrapper > #header { background-image: url('../img/background/header_easter_en.png'); }
-html.lang-base-fr body.easter #wrapper > #header { background-image: url('../img/background/header_easter_fr.png'); }
-html.lang-base-es body.easter #wrapper > #header { background-image: url('../img/background/header_easter_es.png'); }
+html.lang-base-en body.easter #wrapper:not(.attract) > #header { background-image: url('../img/background/header_easter_en.png'); }
+html.lang-base-fr body.easter #wrapper:not(.attract) > #header { background-image: url('../img/background/header_easter_fr.png'); }
+html.lang-base-es body.easter #wrapper:not(.attract) > #header { background-image: url('../img/background/header_easter_es.png'); }
 
-html.lang-base-en body.halloween #wrapper > #header { background-image: url('../img/background/header_halloween_en.png'); }
-html.lang-base-fr body.halloween #wrapper > #header { background-image: url('../img/background/header_halloween_fr.png'); }
-html.lang-base-es body.halloween #wrapper > #header { background-image: url('../img/background/header_halloween_es.png'); }
+html.lang-base-en body.halloween #wrapper:not(.attract) > #header { background-image: url('../img/background/header_halloween_en.png'); }
+html.lang-base-fr body.halloween #wrapper:not(.attract) > #header { background-image: url('../img/background/header_halloween_fr.png'); }
+html.lang-base-es body.halloween #wrapper:not(.attract) > #header { background-image: url('../img/background/header_halloween_es.png'); }
 
 html.lang-base-en .words-of-heroes { background-image: url('../img/background/town/cityBoard_en.png'); }
 html.lang-base-fr .words-of-heroes { background-image: url('../img/background/town/cityBoard_fr.png'); }
