--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -390,7 +390,7 @@ div.tooltip.badge-tooltip {
         }
         .content {
             padding: 5px 5px 5px 110px; background: url('../../img/help/pipWelcome.gif') no-repeat #5c2b20;
-            color: #ddab76; margin-bottom: 10px; border: none;
+            color: #ddab76; margin-bottom: 10px; border: none; min-height: 160px;
             &>p:only-child {margin: 0}
         }
     }
