--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -239,6 +239,29 @@ x-message {
 
   &.attract {
     box-shadow: none; background: none; backdrop-filter: drop-shadow(0 0 20px black);
+    div.header-stats {
+      position: absolute;
+      top: 0px;
+      right: 15px;
+      &>ul {
+        list-style: none;
+        font-variant: small-caps;
+        font-weight: bolder;
+        color: #fdcb70;
+        text-shadow: 0px 1px 1px black, 0px -1px 1px black, 1px 0px 1px black, -1px 0px 1px black, 1px 1px 1px black, -1px -1px 1px black, -1px 1px 1px black, 1px -1px 1px black;
+        text-align: right;
+        font-size: 1.3rem;
+        font-style: italic;
+        &>li {
+          span {
+            font-size: 1.8rem;
+          }
+          &.end-stat {
+            color: white;
+          }
+        }
+      }
+    }
   }
 
   &>#header {
