--- a/templates/ajax/public/intro.html.twig
+++ b/templates/ajax/public/intro.html.twig
@@ -1,12 +1,19 @@
 {% extends "ajax/ajax.html.twig" %}
 {% block ajax %}
+    <div class="header-stats">
+        <ul>
+            <li><span class='count'>{{deadCitizenCount|number_format(0, ',', ' ')}}</span> {{'Bürger gestorben'|trans({}, 'welcome')}}</li>
+            <li><span class='count'>{{zombiesKilled|number_format(0, ',', ' ')}}</span> {{'Zombies gekillt'|trans({}, 'welcome')}}</li>
+            <li><span class='count'>{{canibalismCount|number_format(0, ',', ' ')}}</span> {{'Akte von Kannibalismus'|trans({}, 'welcome')}}</li>
+            <li class="end-stat">{{'Und das wird kaum besser werden...'|trans({}, 'welcome')}}</li>
+        </ul>
+    </div>
     <div class="row-flex v-center">
         <div class="cell padded header rw-7 rw-lg-12 manual-background">
 
             <div class="row">
                 <div class="cell background trailer rw-12">
-
-                    <div class="row-flex v-center">
+                     <div class="row-flex v-center">
                         <div class="cell flex-shrink-0">
                             <div class="panic"></div>
                         </div>
