Added header sign

--- a/assets/less/intl.less
+++ b/assets/less/intl.less
@@ -100,3 +100,7 @@ html.lang-base-es .soul .friend { background: url("../img/soul/refererHeart_es.p
 html.lang-base-en div.or { background: url("../img/or.en.png") no-repeat center; }
 html.lang-base-fr div.or { background: url("../img/or.fr.png") no-repeat center; }
 html.lang-base-es div.or { background: url("../img/or.es.png") no-repeat center; }
+
+html.lang-base-en #wrapper.attract > #header .deco_logo { background: url("../img/attract/deco_logo_01_en.png") no-repeat center; }
+html.lang-base-fr #wrapper.attract > #header .deco_logo { background: url("../img/attract/deco_logo_01_fr.png") no-repeat center; }
+html.lang-base-es #wrapper.attract > #header .deco_logo { background: url("../img/attract/deco_logo_01_es.png") no-repeat center; }
