--- a/templates/web/attract.html.twig
+++ b/templates/web/attract.html.twig
@@ -39,6 +39,7 @@
 <body onclick class="offline_body">
 <div id="wrapper" class="attract">
     <div id="header">
+        <div class="deco_logo"></div>
         <div class="attract_button">
             <a href="{{ url('public_login') }}" target="_self"><span>{{ 'Spielen!'|trans({},'welcome') }}</span></a>
         </div>
