--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -294,6 +294,13 @@ x-message {
       }
     }
 
+    .deco_logo {
+      background-image: url("../img/attract/deco_logo_01_de.png");
+      background-repeat: no-repeat;
+      width: 300px;
+      height: 144px;
+    }
+
     .back-dash {
       background: #00000000; color: #f0d79e; box-shadow: inset 0 0 4px #00000000; border: 1px solid #00000000;
       position: absolute; top: 188px; left: -8px; width: 117px; height: 37px;
