--- a/templates/ajax/forum/view.html.twig
+++ b/templates/ajax/forum/view.html.twig
@@ -53,9 +53,9 @@
                             {% if paranoid and thread.owner and thread.owner != app.user %}
                                 {% set mode = (app.user.id + thread.id + thread.owner.id) % 12 %}
                                 {% if mode == 0 %}
-                                    {{ 'Hängt {user}!'|trans({'{user}': app.user.name},'game') }}
+                                    {{ 'Hängt {user}!'|trans({'{user}': app.user.activeCitizen.alias ?? app.user.name},'game') }}
                                 {% elseif mode == 1 %}
-                                    {{ '{user} wir kriegen dich!'|trans({'{user}': app.user.name},'game') }}
+                                    {{ '{user} wir kriegen dich!'|trans({'{user}': app.user.activeCitizen.alias ?? app.user.name},'game') }}
                                 {% else %}
                                     {{ thread.title }}
                                 {% endif %}
