--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1936,6 +1936,7 @@ span.tag {
 }
 
 .username {
+  word-break: break-all;
   text-decoration: none;
   background-color: #5C0000;
   border-top: 1px solid #98341c;
