--- a/assets/less/mobile.less
+++ b/assets/less/mobile.less
@@ -147,6 +147,10 @@
     };
   }
 
+  .soul .news .content {
+    padding: 5px; background: #5c2b20; min-height: auto;
+  }
+
   body:not(.icon-zoom-1-00) ul.inventory {
     &.rucksack { background: url("../img/background/inventory/inv_bag.gif") no-repeat top left/cover;  }
     & > li {
