--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -102,6 +102,7 @@ div.band {
 .max-height {max-height: 100%}
 
 .text-wrap-all { word-break: break-all; }
+.text-wrap-none { word-break: keep-all; }
 
 button.button-dropdown-button, div.button.button-dropdown-button, div.forum-button.button-dropdown-button {
   position: relative; overflow: visible; display: inline-block; width: auto;
@@ -114,6 +115,8 @@ button.button-dropdown-button, div.button.button-dropdown-button, div.forum-butt
     display: block;
   }
 }
+
+.spaced-icon { display: flex; align-items: center; justify-content: space-between; column-gap: 5px; }
 
 .clear {clear: both;}
 
