--- a/assets/less/modules/ghost.less
+++ b/assets/less/modules/ghost.less
@@ -15,7 +15,7 @@
 }
 
 .town-random {
-  margin: auto; width: 511px; height: 50px; background: url("../../img/background/joinGame_bg.png") no-repeat;
+  margin: auto; width: 511px; max-width: 100%; height: 50px; background: url("../../img/background/joinGame_bg.png") center/contain no-repeat;
   padding: 0 10px;
   &>.label { height: calc(100% - 5px); width: calc(100% - 220px); font-weight: bold; font-size: 1.35rem }
 }
