--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -799,7 +799,7 @@ button, *.button, *.modal-button {
   &:active { border-bottom-width: 1px; border-top-width: 2px; }
   &.inline { padding: 0 5px 0; }
 
-  &:not(.inline) { display: block; width: 100%; }
+  &:not(.inline) { &:not(.spaced-icon) { display: block; } width: 100%; }
 
   &.small {
     font-size: 1rem; padding: 2px 6px; display: inline-block; min-height: 0; margin:0;
@@ -834,7 +834,7 @@ input[type='text'],input[type='number'],input[type='password'],input[type='email
   &:not(textarea) { background: @myhordes-input-background; }
   &:not(input)    { background: @myhordes-input-text-background; resize: vertical; max-width: 100%; min-height: 250px; }
   border: 1px solid @myhordes-input-border; height: 25px;
-  &:not(.inline) { display: block; width: 100%; }
+  &:not(.inline) { &:not(.spaced-icon) { display: block; } width: 100%; }
   &:focus { outline-color: @myhordes-input-border; }
   &:invalid,&.invalid { box-shadow: 0 0 4px red; }
 }
