--- a/templates/ajax/ghost/create_town.html.twig
+++ b/templates/ajax/ghost/create_town.html.twig
@@ -297,6 +297,9 @@
                             <select name="shamanMode" id="shamanMode" x-payload="shamanMode">
                                 <option value="normal" title="{{'Der Schamane wird gewählt und die Seelen werden gequält.'|trans({}, 'ghost')}}">{{'Normal'|trans({}, 'ghost')}}</option>
                                 <option value="job" title="{{'Der Schamane ist ein Beruf, die Seelen werden in der Werkstatt verwandelt.'|trans({}, 'ghost')}}">{{'Job'|trans({}, 'ghost')}}</option>
+                                {% if is_granted('ROLE_CROW') %}
+                                    <option value="both" title="{{'Beide Schamanen-Modi sind gleichzeitig aktiviert (experimentell!).'|trans({}, 'ghost')}}">{{'Kombiniert'|trans({}, 'ghost')}}</option>
+                                {% endif %}
                                 <option value="none" title="{{'Der Schamane und die Seelen werden deaktiviert.'|trans({}, 'ghost')}}">{{'Deaktiviert'|trans({}, 'ghost')}}</option>
                             </select>
                         </div>
@@ -495,7 +498,7 @@
         fun_link_help('nightMode','helpNightMode');
         fun_link_help('nightTime','helpNightTime');
         fun_link_help('shamanMode','helpShaman', v => {
-            if (document.getElementById('shaman')) document.getElementById('shaman').checked = (v === 'job')
+            if (document.getElementById('shaman')) document.getElementById('shaman').checked = (v === 'job' || v === 'both')
         });
 
         $.html.addEventListenerAll('#nightTimeBegin', 'change', function() {
