--- a/templates/ajax/game/item_tooltip.html.twig
+++ b/templates/ajax/game/item_tooltip.html.twig
@@ -8,7 +8,11 @@
             broken: false,
         } %}
     {% endif %}
-    <h1>{{ item.prototype.label|trans({},'items') }} {% if item.broken %}<span class="broken">({{ 'Kaputt'|trans({},'items') }})</span>{% endif %} <img src="{{ asset('build/images/item/item_' ~ item.prototype.icon ~ '.gif') }}" alt="{{ item.prototype.label|trans({},'items') }}"></h1>
+    {% set item_name = item.prototype.label %}
+    {% if item.prototype.name == 'soul_blue_#00' and not item.firstPick %}
+        {% set item_name = 'Schwache Seele' %}
+    {% endif %}
+    <h1>{{ item_name|trans({},'items') }} {% if item.broken %}<span class="broken">({{ 'Kaputt'|trans({},'items') }})</span>{% endif %} <img src="{{ asset('build/images/item/item_' ~ item.prototype.icon ~ '.gif') }}" alt="{{ item_name|trans({},'items') }}"></h1>
     {{ item.prototype.description|trans({},'items') }}
     {% if item.prototype.hasProperty('is_water') and app.user.activeCitizen is not null and app.user.activeCitizen.hasStatus('hasdrunk') %}
         <div class="item-addendum">{{ 'Beachte: Du hast heute bereits getrunken und deine Aktionspunkte für diesen Tag bereits erhalten.'|trans({},'items') }}</div>
