--- a/templates/ajax/admin/widget/controls.twig
+++ b/templates/ajax/admin/widget/controls.twig
@@ -24,6 +24,11 @@
         <div class="row-flex">
             <div class="padded cell note note-lightest">
                 <label>{{'Vergiftet:'|trans({}, 'admin')}}<input type="checkbox" id="{{ _self.gen_id(prefix,'itemwidget','opt_poison')}}" /></label>
+                <div class="row-flex vertical stretch hidden" id="{{ _self.gen_id(prefix,'itemwidget','opt_poison_conf')}}">
+                    <label class="hidden"><input type="radio" value="0" checked name="{{ _self.gen_id(prefix,'itemwidget','opt_poison')}}" id="{{ _self.gen_id(prefix,'itemwidget','opt_poison_0')}}" /></label>
+                    <label class="row-flex"><span class="cell grow-1">{{'Tödlich'|trans({}, 'admin')}}</span><input type="radio" value="1" name="{{ _self.gen_id(prefix,'itemwidget','opt_poison')}}" id="{{ _self.gen_id(prefix,'itemwidget','opt_poison_1')}}" /></label>
+                    <label class="row-flex"><span class="cell grow-1">{{'Infektiös'|trans({}, 'admin')}}</span><input type="radio" value="2" name="{{ _self.gen_id(prefix,'itemwidget','opt_poison')}}" id="{{ _self.gen_id(prefix,'itemwidget','opt_poison_2')}}" /></label>
+                </div>
             </div><div class="padded cell note note-lightest">
                 <label>{{'Zerstört:'|trans({}, 'admin')}}<input type="checkbox" id="{{ _self.gen_id(prefix,'itemwidget','opt_broken')}}" /></label>
             </div><div class="padded cell note note-lightest">
@@ -39,12 +44,17 @@
 {% endmacro %}
 {% macro widget_item_creator_js(selector, api_url, load_url, prefix = '') %}
     <script>
+        $.html.addEventListenerAll('#{{ _self.gen_id(prefix,'itemwidget','opt_poison')}}', 'click', function(e,elem){
+            if (elem.checked) document.getElementById('{{ _self.gen_id(prefix,'itemwidget','opt_poison_1')}}').checked = true;
+            else document.getElementById('{{ _self.gen_id(prefix,'itemwidget','opt_poison_0')}}').checked = true;
+            document.getElementById('{{ _self.gen_id(prefix,'itemwidget','opt_poison_conf')}}').classList.toggle('hidden', !elem.checked);
+        });
         $.html.addEventListenerAll('#{{ _self.gen_id(prefix,'itemwidget','spawn')}}', 'click', function(){
             const number = parseInt(document.getElementById("{{ _self.gen_id(prefix,'itemwidget','number')}}").value);
             const item = document.getElementById('{{ _self.gen_id(prefix,'itemwidget','select')}}').value;
 
             const conf = {
-                poison: document.getElementById('{{ _self.gen_id(prefix,'itemwidget','opt_poison')}}').checked,
+                poison: parseInt(document.querySelector('input[name="{{ _self.gen_id(prefix,'itemwidget','opt_poison')}}"]:checked')?.value ?? '0'),
                 broken: document.getElementById('{{ _self.gen_id(prefix,'itemwidget','opt_broken')}}').checked,
                 essential: document.getElementById('{{ _self.gen_id(prefix,'itemwidget','opt_essential')}}').checked,
                 hidden: document.getElementById('{{ _self.gen_id(prefix,'itemwidget','opt_hidden')}}').checked
